2003-07-15  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-text.c, cong-editor-area.c, cong-editor-widget3-impl.h, cong-editor-widget3.c, global.h

	Debug rendering of area outlines

	* Makefile.am, cong-editor-area-span-tag.c, cong-editor-area-span-tag.h

	New files; added to build.

	* cong-editor-node-element-span.c

	Wiring up new span tag area code.

	* cong-editor-widget3.c

	Beginnings of change notification handling

	* main.c

	Test hook for testing layout
	
	* Makefile.am

	Added the new files into the build and tarball

	* cong-editor-area-bin.c, cong-editor-area-bin.h, cong-editor-area-border.c, cong-editor-area-composer.c, cong-editor-area-container.h, cong-editor-area-pixbuf.c, cong-editor-area-spacer.c, cong-editor-area-text.c, cong-editor-area-unknown-tag.c, cong-editor-area-unknown-tag.h, cong-editor-area.c, cong-editor-area.h, cong-editor-node-document.c, cong-editor-node-document.h, cong-editor-node-element-span.c, cong-editor-node-element-structural.c, cong-editor-node-element-unknown.c, cong-editor-node-text.c, cong-editor-node-unimplemented.c, cong-editor-node.c, cong-editor-node.h, cong-editor-widget3-impl.h, cong-editor-widget3.c, cong-eel.c, cong-eel.h, main.c

	Early development

	* cong-editor-area-structural-tag.c, cong-editor-area-structural-tag.h

	New files

2003-07-14  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-unknown-tag.c, cong-editor-area-unknown-tag.h, cong-editor-node-document.c, cong-editor-node-document.h, cong-editor-node-element-span.c, cong-editor-node-element-span.h, cong-editor-node-element-structural.c, cong-editor-node-element-structural.h, cong-editor-node-element-unknown.c, cong-editor-node-element-unknown.h, cong-editor-node-element.c, cong-editor-node-element.h, cong-editor-node-text.c, cong-editor-node-text.h, cong-editor-node-unimplemented.c, cong-editor-node-unimplemented.h

	Even more new files
	