@@ -1,5 +1,13 @@
 2003-07-15  David Malcolm <david@davemalcolm.demon.co.uk>
 
+	* cong-editor-area-bin.c, cong-editor-area-composer.c, cong-editor-area-composer.h, cong-editor-area-span-tag.c, cong-editor-area-structural-tag.c
+
+	Packing options for CongEditorAreaComposer, similar to GtkBox
+	
+	* cong-editor-area-pixbuf.c
+
+	Bugfix: use correct size of pixbuf, not the result of CongEditorArea allocation.
+
 	* cong-editor-area-text.c, cong-editor-area.c, cong-editor-widget3-impl.h, cong-editor-widget3.c, global.h
 
 	Debug rendering of area outlines
